--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,15 +12,15 @@ pool:
     - npm
 
 variables:
-buildConfiguration: 'Release'
-wwwrootDir: 'Tailspin.SpaceGame.Web/wwwroot'
-dotnetSdkVersion: '3.1.300'
+  buildConfiguration: 'Release'
+  wwwrootDir: 'Tailspin.SpaceGame.Web/wwwroot'
+  dotnetSdkVersion: '3.1.300'
 
 steps:
 - task: UseDotNet@2
   displayName: 'Use .NET Core SDK $(dotnetSdkVersion)'
   inputs:
-    version: '$(dotnetSdkVersion')
+    version: '$(dotnetSdkVersion)'
 
 - task: Npm@1
   displayName: 'Run npm install'
